--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,28 @@
+2006-06-25  Matthew F. Barnes  <matthew@barnes.net>
+
+	* Merge updates to PCL 0.0.24
+
+	* pcl-compiler.c: (compiler_cut)
+	Pass depth value from cut node to PCL_OPCODE_STORE_CUT arg.
+
+	* pcl-eval.c: (pcl_eval_frame)
+	PCL_OPCODE_STORE_CUT: Set the cut flag on the appropriate frame.
+
+	* pcl-eval.c: (pcl_eval_code_ex)
+	Fix logic for populating cell variable slots.
+
+	* pcl-opcode.h:
+	PCL_OPCODE_STORE_CUT now takes an argument.
+
+	* pcl-parser.y: (normalize_conjunction)
+	Tag cut nodes at depth 2 for post-processing.
+
+	* pcl-parser.y: (normalize_cut)
+	New function normalizes tagged cut nodes.
+
+	* pcl-string.c: (string_method_join)
+	Refactor logic and handle iterator arguments properly.
+
 2006-04-25  Matthew F. Barnes  <matthew@barnes.net>
 
 	* src/pcl-cell.h:
