--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2007-05-23  Matthew Barnes  <mbarnes@redhat.com>
 
+	* src/gva-tree-view.c (tree_view_column_new_title):
+	Put the text renderer in PANGO_ELLIPSIZE_END mode.
+
+	* src/gva-tree-view.c (gva_tree_view_set_selected_game):
+	Don't assume the GtkTreeModelSort path is valid.
+
+2007-05-23  Matthew Barnes  <mbarnes@redhat.com>
+
 	* src/gva-common.h:
 	Put all GConf key definitions here.
 
