--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
-GNOME Video Arcade 0.2
-======================
+GNOME Video Arcade 0.1.2
+========================
 
-        Released May ??, 2007
+        Released May 24, 2007
 
         What's New
         ----------
