--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+GNOME Video Arcade 0.1.3
+========================
+
+        Released May 25, 2007
+
+        What's New
+        ----------
+        * Fixed some crashers.
+        * Make accelerator keys work.
+        * Show menu tooltips in statusbar.
+        * Add menu item for adding or removing favorites.
+
 GNOME Video Arcade 0.1.2
 ========================
 
