--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,51 @@
+2007-05-25  Matthew Barnes  <mbarnes@redhat.com>
+
+	* NEWS: Update for 0.1.3.
+
+	* src/gva-ui.c:
+	Make accelerator keys work.
+	Add more tooltips to actions.
+	Show menu item tooltips in the statusbar.
+
+2007-05-25  Matthew Barnes  <mbarnes@redhat.com>
+
+	* data/gnome-video-arcade.ui:
+	Add menu items for adding or removing from favorites list.
+
+	* src/gva-tree-view.c (tree_view_selected_changed_cb):
+	Update visibility of "favorite" actions.
+
+	* src/gva-tree-view.c (tree_view_favorite_clicked_cb):
+	Activate "insert-favorite" or "remove-favorite" action.
+
+	* src/gva-ui.c:
+	* src/gva-ui.h:
+	Add "insert-favorite" and "remove-favorite" actions.
+	Rename gva_ui_get_glade_widget() to gva_ui_get_widget().
+
+2007-05-25  Matthew Barnes  <mbarnes@redhat.com>
+
+	* src/gva-common.h:
+	* src/gva-xmame.c:
+	* src/gva-xmame.h:
+	Minor fixes.
+
+2007-05-24  Matthew Barnes  <mbarnes@redhat.com>
+
+	* src/gva-tree-view.c (tree_view_button_press_cb):
+	Don't assume gtk_tree_view_get_path_at_pos() will succeed.
+	User may right-click on blank area of the tree view.
+
+	* src/gva-tree-view.c (tree_view_selected_changed_cb):
+	Desensitize the "record" action when nothing is selected.
+
+	* src/gva-tree-view.c (gva_tree_view_update):
+	Check the return value of gva_tree_view_get_last_selected_game()
+	for NULL, which can occur the first time the program is run.
+
+	* src/gva-tree-view.c (gva_tree_view_get_last_selected_game):
+	Don't assume GConf will give us a non-empty string.
+
 2007-05-23  Matthew Barnes  <mbarnes@redhat.com>
 
 	* data/gnome-video-arcade.glade (play-back-scrolled-window):
