--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-06-04  Matthew Barnes  <mbarnes@redhat.com>
+
+	* src/gva-tree-view.c (tree_view_filter_visible),
+	(gva_tree_view_set_selected_game):
+	Fix a couple memory leaks.
+
 2007-06-02  Matthew Barnes  <mbarnes@redhat.com>
 
 	* NEWS: Update for 0.1.4.
