--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-14  Matthew Barnes  <mbarnes@redhat.com>
+
+	* src/gva-tree-view.c (gva_tree_view_set_selected_game):
+	Fix a memory leak.
+
 2007-06-08  Matthew Barnes  <mbarnes@redhat.com>
 
 	* src/gva-xmame.c (xmame_scan_for_error):
