--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+GNOME Video Arcade 0.2.0
+========================
+
+        Released June 21, 2007
+
+        What's New
+        ----------
+        * Faster start up.
+        * After recording a game, show the Recorded Games window and
+          highlight the new entry.
+
 GNOME Video Arcade 0.1.4
 ========================
 
