--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+GNOME Video Arcade 0.2.1
+========================
+
+        Released July ??, 2007
+
+        What's New
+        ----------
+        * Basic properties window with game history (if available).
+
 GNOME Video Arcade 0.2.0
 ========================
 
